<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="bookItem"
            type="com.skrash.book.domain.entities.BookItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imCover"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:maxWidth="100dp"
            android:maxHeight="140dp"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@{bookItem.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/imCover"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@{bookItem.author}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/imCover"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/preview_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="imCover, tvTitle, tvAuthor" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:isIndicator="true"
            android:rating="@{bookItem.rating}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preview_bottom_barrier" />

        <RatingBar
            android:id="@+id/popularityBar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:isIndicator="true"
            android:rating="@{bookItem.popularity}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBar" />

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toBottomOf="@id/preview_bottom_barrier"
            />

        <Button
            android:id="@+id/btnGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toStartOf="@id/btnTags"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popularityBar" />

        <Button
            android:id="@+id/btnTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/btnGenres"
            app:layout_constraintTop_toBottomOf="@id/popularityBar" />

        <LinearLayout
            android:id="@+id/tagsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:minHeight="50dp"
            android:minWidth="100dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btnGenres">

            <TextView
                android:id="@+id/tvTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="7"
                />

            <Button
                android:id="@+id/btnCloseTags"
                android:text="@string/button_closed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="50dp"
                android:minWidth="100dp"
                android:visibility="gone"
                android:textAlignment="center"
                android:layout_weight="2"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>